--- a/Vue/vue-demo/package.json
+++ b/Vue/vue-demo/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "unocss": "^66.3.2",
     "vite": "^6.1.0"
   }
 }
